# ECS-Architecture

./: README.md
Dirt/Clion/: CMakeLists.txt  Chunk.cpp  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp  Common.hpp  Components.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Game.cpp  Game.hpp  Vec2.cpp  Vec2.hpp  main.cpp
Dirt/Clion/lib/sdl2_gfx/1.0.4/: INSTALL_RECEIPT.json  sbom.spdx.json
Dirt/Clion/lib/sdl2_gfx/1.0.4/include/: ._SDL2
Dirt/Clion/lib/sdl2_gfx/1.0.4/include/SDL2_gfx/: ._SDL2_gfxPrimitives.h  SDL2_gfxPrimitives.c  SDL2_gfxPrimitives.h
Dirt/Clion/lib/sdl2_gfx/1.0.4/lib/: libSDL2_gfx.dylib
Dirt/Dirt/Dirt/: Chunk.cpp  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp  Common.hpp  Entity.cpp  Game.cpp  Game.hpp
Dirt/Dirt/Dirt.xcodeproj/: project.pbxproj
GW/MacOS/Geometry Warrior/Geometry Warrior/: main.cpp
GW/MacOS/Geometry Warrior/Geometry Warrior.xcodeproj/: project.pbxproj
GW/Windows/GW/: GW.sln
GW/Windows/GW/GW/: Components.hpp  Entity.hpp  GW.vcxproj  (+4 more)
Pong/: README.md  Todo.md  notes.txt
Pong - SDL/Pong - SDL/Pong - SDL/: Common.hpp  Components.hpp  EntityManager.cpp  Game.cpp  Game.hpp
Pong - SDL/Pong - SDL/Pong - SDL.xcodeproj/: project.pbxproj
Pong - SFML/Pong - SFML.xcodeproj/: project.pbxproj
Pong/Windows/Pong/: Pong.sln
SDL - Test/Test/Test/: main.cpp
SDL - Test/Test/Test.xcodeproj/: project.pbxproj
SFML-Test/SFML-Test/: Common.hpp  Components.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Game.cpp  Game.hpp  Vec2.cpp  main.cpp
SFML-Test/SFML-Test.xcodeproj/: project.pbxproj
(+60 files in other folders)
